# codeg

./: .gitignore  Cargo.toml  README.md  build.rs  main
configuration/: commons.yml  orders.yml  tenants.yml
src/: generate_cargo_toml.rs  generate_files.rs  generate_main.rs  generate_proto.rs  generates.rs  logging.rs  main.rs  models.rs
src/utils/: generate_cargo_toml.rs  generate_endpoint.rs  generate_main.rs  generates.rs  mod.rs
test/: generate.sh
