[package]
name = "codeg"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
dotenvy = "0.15.7"
serde = { version = "1.0.205", features = ["derive"] }
serde_yaml = "0.9.34"
serde_yml = "0.0.11"
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.2"
tonic-reflection = "0.12.2"
tracing = "0.1.40"
prost = "0.13.2"
tracing-subscriber = "0.3.18"
messengerc = { git = "https://github.com/bennekrouf/messengerc.git" }
http = "1.1.0"
chrono = "0.4.38"

[build-dependencies]
dotenvy = "0.15.7"
tonic-build = "0.12.2"

